[metadata]
description = Simple async HTTP/1.1 client
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Allan Feldman
url = https://github.com/a-feld/pywreck
platforms = any
license = Apache-2.0
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Internet :: WWW/HTTP
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
setup_requires =
    setuptools_scm
python_requires = >=3.7
package_dir=
    =src
packages=find:
include_package_data = True

[options.packages.find]
where=src

[options.package_data]
* = *.txt

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = --doctest-modules --strict-markers -v
testpaths = src tests
filterwarnings =
    error
xfail_strict = true

[tool:isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88
known_first_party =
    pywreck
    handlers
known_third_party =
    pytest

[flake8]
max-line-length = 88
ignore = W503,E203

[coverage:run]
branch = True
source = pywreck
