[metadata]
description = Simple async HTTP/1.1 client
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Allan Feldman
url = https://a-feld.github.io/pywreck
project_urls =
    Source=https://github.com/a-feld/pywreck
    Changelog=https://github.com/a-feld/pywreck/releases
platforms = any
license = Apache-2.0
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Internet :: WWW/HTTP
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
setup_requires =
    setuptools_scm
python_requires = >=3.9
package_dir=
    =src
packages=find:
include_package_data = True

[options.packages.find]
where=src

[options.package_data]
* =
    *.txt
    py.typed

[tool:pytest]
addopts = --doctest-modules --strict-markers -v
testpaths = src tests
filterwarnings =
    error
xfail_strict = true

[tool:isort]
profile = black
known_first_party =
    pywreck
    handlers
known_third_party =
    pytest

[flake8]
max-line-length = 88
ignore = W503,E203

[coverage:run]
branch = True
source = pywreck

[mypy]
files = src
python_version = 3.9
strict = true
